--- a/css/main.css
+++ b/css/main.css
@@ -84,25 +84,25 @@ header h2 span{
     padding-right: 50px;
 }
 
-/***** WORK *****/
+/***** Portfolio *****/
 
-#work{
+#portfolio{
   background: #f9ceb7;
   text-align: center;
 }
-#work .full-width {
+#portfolio .full-width {
     padding: 115px 0;
 }
-#work img {
+#portfolio img {
     padding-bottom: 30px;
 }
-#work h3 {
+#portfolio h3 {
     font-size: 24px;
     line-height: 32px;
     width: 190px;
     margin: 0 auto;
 }
-#work p {
+#portfolio p {
     font-family: 'Lora', serif;
     font-size: 18px;
     line-height: 30px;
